WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179451
Async iteration should only fetch the next method once and add feature flag
https://bugs.webkit.org/show_bug.cgi?id=179451
Summary
Async iteration should only fetch the next method once and add feature flag
Keith Miller
Reported
2017-11-08 15:18:28 PST
Async iteration should only fetch the next method once and add feature flag
Attachments
Patch
(48.65 KB, patch)
2017-11-08 15:37 PST
,
Keith Miller
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2017-11-08 15:37:50 PST
Created
attachment 326396
[details]
Patch
GSkachkov
Comment 2
2017-11-09 14:20:40 PST
Comment on
attachment 326396
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=326396&action=review
> Source/JavaScriptCore/ChangeLog:9 > + the expected behavior of the proposal.
Looks good to me, but not sure that we have tests that cover this case.
Geoffrey Garen
Comment 3
2017-11-10 12:36:41 PST
Comment on
attachment 326396
[details]
Patch r=me
Keith Miller
Comment 4
2017-11-13 15:10:09 PST
Committed
r224787
: <
https://trac.webkit.org/changeset/224787
>
Per Arne Vollan
Comment 5
2017-11-14 07:29:19 PST
Should we also enable this feature for CMake builds?
Saam Barati
Comment 6
2017-11-14 09:21:53 PST
(In reply to Per Arne Vollan from
comment #5
)
> Should we also enable this feature for CMake builds?
Yeah. Keith, what was the motivation for adding a build flag here?
Keith Miller
Comment 7
2017-11-14 09:46:12 PST
(In reply to Saam Barati from
comment #6
)
> (In reply to Per Arne Vollan from
comment #5
) > > Should we also enable this feature for CMake builds? > > Yeah.
Yeah, I'll add one for CMake.
> > Keith, what was the motivation for adding a build flag here?
The feature has not reached stage 4 yet so we don't want to accidentally ship the feature.
Saam Barati
Comment 8
2017-11-14 11:18:26 PST
(In reply to Keith Miller from
comment #7
)
> (In reply to Saam Barati from
comment #6
) > > (In reply to Per Arne Vollan from
comment #5
) > > > Should we also enable this feature for CMake builds? > > > > Yeah. > > Yeah, I'll add one for CMake. > > > > > Keith, what was the motivation for adding a build flag here? > > The feature has not reached stage 4 yet so we don't want to accidentally > ship the feature.
But we have a runtime option already, right?
Radar WebKit Bug Importer
Comment 9
2017-11-15 09:39:29 PST
<
rdar://problem/35562169
>
Michael Catanzaro
Comment 10
2017-11-15 12:27:58 PST
(In reply to Saam Barati from
comment #8
)
> But we have a runtime option already, right?
Where are JSC runtime options defined? (In reply to Keith Miller from
comment #7
)
> The feature has not reached stage 4 yet so we don't want to accidentally > ship the feature.
Is any precaution taken to ensure it's not already shipping on CMake ports? E.g. is it gated behind ENABLE(DEVELOPER_MODE)? For WebKit-level features, that's easy to accomplish by setting defaultValue: DEFAULT_EXPERIMENTAL_FEATURES_ENABLED in WebPreferences.yaml. But I don't know how this is handled for JSC.
Keith Miller
Comment 11
2017-11-15 14:19:16 PST
(In reply to Michael Catanzaro from
comment #10
)
> Where are JSC runtime options defined?
They are in Source/JavaScriptCore/runtime/Options.*
> Is any precaution taken to ensure it's not already shipping on CMake ports? > E.g. is it gated behind ENABLE(DEVELOPER_MODE)? For WebKit-level features, > that's easy to accomplish by setting defaultValue: > DEFAULT_EXPERIMENTAL_FEATURES_ENABLED in WebPreferences.yaml. But I don't > know how this is handled for JSC.
This feature was only added in the last month or so. Unless someone shipped in the last month they won't have the feature. I don't think JSC has anything like experimental features in WebKit.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug