Async iteration should only fetch the next method once and add feature flag https://bugs.webkit.org/show_bug.cgi?id=179451

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

Add feature flag for Async iteration. Also, change async iteration to match
the expected behavior of the proposal.

* Configurations/FeatureDefines.xcconfig:
* builtins/AsyncFromSyncIteratorPrototype.js:
(globalPrivate.createAsyncFromSyncIterator):
(globalPrivate.AsyncFromSyncIteratorConstructor):
* builtins/BuiltinNames.h:
* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitGetAsyncIterator):
* runtime/Options.h:

Source/WebCore:

Add feature flag for Async iteration.

* Configurations/FeatureDefines.xcconfig:

Source/WebCore/PAL:

Add feature flag for Async iteration.

* Configurations/FeatureDefines.xcconfig:

Source/WebKit:

Add feature flag for Async iteration.

* Configurations/FeatureDefines.xcconfig:

Source/WebKitLegacy/mac:

Add feature flag for Async iteration.

* Configurations/FeatureDefines.xcconfig:

Tools:

Add feature flag for Async iteration.

* TestWebKitAPI/Configurations/FeatureDefines.xcconfig:

Canonical link: https://commits.webkit.org/195672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224787 268f45cc-cd09-0410-ab3c-d52691b4dbfc